--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 arrow==0.10.0
-google-api-python-client==1.6.2
-gsheets==0.3
-httplib2==0.10.3
+google-api-python-client==1.12.8
+# gsheets==0.5.1
+git+https://github.com/xflr6/gsheets.git@master#gsheets
+httplib2==0.19.0
 oauth2client==4.1.2
-pyasn1==0.3.2
-pyasn1-modules==0.0.11
 python-dateutil==2.6.1
 rsa==3.4.2
-six==1.10.0
 uritemplate==3.0.0
